style.css
:root {
  --text:#2a2a2a;
  --text-med:#bbb;
  --text-faint:#ffdc68;
  --text-faint-alpha:#ffdc68a8;
  --text-ultra-faint:#d7d7d7;
  --highlight:#fffdcc;
  --header-bg:#fffde9;
  --bg:#fff;
  --bg-faint:#f3f3f3;
  --selection:#f7cb4577;
}
::-moz-selection {background-color:var(--selection);}
::selection {background-color:var(--selection);}
body {background-color:var(--bg);color:var(--text);font-family:'Raleway', sans-serif;font-variant-ligatures:common-ligatures;font-weight:300;font-size:17px;margin:0 auto;max-width:1200px;text-rendering:optimizeLegibility;}
h1, h2, h5 {font-variant-ligatures:discretionary-ligatures;font-weight:600;line-height:1.1em;margin-top:0;margin-bottom:0;}
a {color:var(--text);text-decoration:none;}
b {font-weight:700;}

html {width:100vw;overflow-x:hidden;}
.row {padding:40px 5vw;position:relative;}
@media screen and (min-width:1200px) {
  .row::before, .row::after {content:'';background-color:inherit;position:absolute;top:0;bottom:0;width:calc(50vw - 600px);right:100%;}
  .row::after {right:unset;left:100%;}
}
body a.btn {border:none;border-radius:6px;font-weight:bold;display:inline-block;margin-top:10px;padding:8px 14px;}
emoji {font-family:'apple color emoji','segoe ui emoji','noto color emoji','android emoji',emojisymbols,'emojione mozilla','twemoji mozilla','segoe ui symbol';font-weight:400;}

/* OVERVIEW */
#overview {background-color:var(--header-bg);background-image:url(drawings/self-portraits/working.png),radial-gradient(circle,#77777744 3%,#9f9f9f00 4%,#9f9f9f00 100%);background-position-x:calc(100% - 30px), 0;background-position-y:calc(100% - 100px), 0;background-repeat:no-repeat,repeat;background-size:0 0,48px 48px;position:relative;}
#overview::before, #overview::after {background:inherit;background-image:url('images/transparent.gif'),radial-gradient(circle,#77777744 3%,#9f9f9f00 4%,#9f9f9f00 100%);}
#overview h1 {font-size:42px;letter-spacing:3px;line-height:0.8em;}
#overview h1 i {font-style:normal;letter-spacing:0;margin-left:-4px;}
#overview h1 span {color:var(--text-med);display:block;font-size:36px;font-weight:600;letter-spacing:2.4px;line-height:0.9;margin-top:19px;}
#overview h3 {color:var(--text);font-size:1.1em;font-weight:300;letter-spacing:1.8px;margin-bottom:7vh;text-transform:uppercase;}
#overview h3 divider::before {content:',';}
#overview h3 divider:last-of-type::after {content:'& ';color:var(--text);}
#overview img {max-width:100%;}
@media screen and (min-width:375px) {
  #overview h1 {font-size:37px;line-height:inherit;}
  #overview h1 span {font-size:31.1px;height:1em;line-height:0.5;margin-top:-3px;overflow-y:hidden;}
  #overview h3 {letter-spacing:4px;}
}
@media screen and (min-width:500px) {
  #overview h1 {font-size:46px;}
  #overview h1 span {font-size:39px;margin-top:-5px;}
  /*#overview h3 divider::before {content:unset;}*/
  /*#overview h3 divider::after, #overview h3 divider:last-of-type::after {content:'• ';}*/
}
@media screen and (min-width:620px) {
  #overview > img {display:none;}
  #overview {
    background-image:url(drawings/self-portraits/glasses.png),radial-gradient(circle,#77777744 3%,#9f9f9f00 4%,#9f9f9f00 100%);
    background-size:auto 410px,48px 48px; /* double-check this size for glasses drawing */
    background-position-x:calc(100% - 30px), 0;background-position-y:calc(100% - 30px), 0;
  }
  #overview .bio {margin-right:255px;}
}
@media screen and (min-width:780px) {
  #overview {
    background-size:auto calc(100% - 60px),48px 48px; /* double-check this size for glasses drawing */
  }
  #overview .bio {margin-right:255px;}
}
@media screen and (min-width:830px) {
  #overview h1 {font-size:60px;letter-spacing:4px;}
  #overview h1 i {font-style:normal;letter-spacing:0;margin-left:-4px;}
  #overview h1 span {color:var(--text-ultra-faint);font-size:41.2px;font-weight:700;height:1em;letter-spacing:8.1px;line-height:0.5em;margin-top:-7px;padding-left:2px;}
  #overview h3 {font-size:1em;font-weight:300;margin-top:-12px;margin-bottom:7vh;padding-left:20px;}
}
@media screen and (min-width:1024px) {
  #overview {
    background-image:url(drawings/self-portraits/guitar.png),radial-gradient(circle,#77777744 3%,#9f9f9f00 4%,#9f9f9f00 100%);
    /*background-size:400px 400px,48px 48px;*/ /* double-check this size for guitar drawing */
  }
  #overview .bio {margin-right:405px;}
}
@media screen and (min-width:1350px) {
  #overview {
    background-image:url(drawings/self-portraits/working.png),radial-gradient(circle,#77777744 3%,#9f9f9f00 4%,#9f9f9f00 100%);
    /*background-size:400px 400px,48px 48px;*/ /* double-check this size for working drawing */
  }
  #overview .bio {margin-right:385px;}
}

#overview .bio {letter-spacing:1px;line-height:1.9em;}

#overview ul {margin-left:-11px;padding-left:0;}
#overview li {display:inline-block;padding:0 6px;position:relative;}
#overview li::before {content:'|';position:absolute;left:-5px;}
#overview li:first-of-type::before {content:unset;}
#overview a {border-radius:4px;color:var(--text);display:inline-block;letter-spacing:1px;padding:2px 5px;position:relative;}
#overview a:hover {background-color:var(--text);color:var(--bg);}

@media screen and (min-width:400px) {
  #overview ul {margin-left:-15px;}
  #overview li {display:inline-block;padding:0 10px;position:relative;}
}
/* APPROACH */
#approach {display:none;}

/* WORK */
.work {}
.work img {margin:0 auto;display:block;max-height:100px;max-width:80%;transition:all 150ms;}
.work h4 {margin:-20px 0 0;}
.work p {margin:.3em 0 .6em;}

.work a {
  align-items:center;
  background:no-repeat center;
  background-size:100% 100%;
  border-radius:8px;
  box-shadow:0 0 13px -4px var(--text-med);
  display:flex;
  flex-flow:column;
  font-weight:600;
  justify-content:space-evenly;
  letter-spacing:.1px;
  padding:15px;
  margin:20px 0 0;
  min-height:160px;
  position:relative;
  overflow:hidden;
  text-align:center;
  transition:all 250ms, background-size 180ms, transform 160ms;
}
.work a:hover {box-shadow:0 10px 30px var(--text-med);transform:scale(1.05);}
.work a:hover img {max-height:108px;max-width:86%;}
.work a[data-tags*="Presentation"]::before {opacity:.5;content:'\f685';font-family:"Font Awesome 5 Pro";font-weight:400;position:absolute;right:8px;bottom:8px;font-size:16px;transition:inherit;}
.work a[data-tags*="Incomplete"]::before {opacity:.5;content:'\f85e';font-family:"Font Awesome 5 Pro";font-weight:400;position:absolute;right:8px;bottom:8px;font-size:16px;transition:inherit;}
.work a:hover::before {opacity:1;}

/* AMAZON */
a.amazon {background-color:#f29d39;background-image:radial-gradient(ellipse,#f29d39 50%,#f58109);background-size:170% 160%;background-position:90% 100%;color:white;}
a.amazon + .amazon {background-color:#48a6de;background-image:radial-gradient(ellipse,#48a6de 50%,#347aad);}
/* BLUETOOTH */
a.bluetooth {background:url(images/bluetooth/chevrons-blue-transp.png) repeat center;background-color:#40a0fc;background-size:100px 100px;color:white;}
a.bluetooth:hover {background-size:92px 92px;}
/* BOB */
a.bob {background:url(images/bob-books/bob-bg.jpg) no-repeat center;background-size:108% 108%;color:#4f5354;}
a.bob:hover {background-size:100% 100%;}
a.bob h4 {margin-top:-10px;}
/* DICTIONARY */
a.dictionary {background:var(--text-faint);}
a.dictionary h4 {margin-top:-30px;}
a.dictionary img {max-width:88%;}
a.dictionary:hover img {max-width:93%;}
/* TMO */
a.tmo {background:url(images/tmo/topography.png) repeat center;background-size:400px 400px;}
a.tmo:hover {background-size:370px 370px;}
a.tmo h4 {margin-top:0;}
/* EARWAX */
a.loveEarwax {background-color:#1b1b1b;color:white;}
a.loveEarwax div {position:relative;}
a.loveEarwax img:last-child {opacity:0;transition:opacity 240ms;position:absolute;top:0;right:0;left:0;z-index:1;}
a.loveEarwax:hover img:last-child {opacity:1;}
/* LENDINGHOME */
a.lending {background-color:#f7CC45;}
/* SUX */
a.sux {background-color:#e0f2f1;color:#375068;}
a.sux h4 {margin-top:-12px;}

.caseStudyLink img[src=""] {display:none;}
@media screen and (min-width:670px) {
  #work .flex-grid {display:flex;flex-wrap:wrap;justify-content:space-between;}
  #work a {margin:2% 0;width:calc(48% - 30px);}
  /*#work img {}*/
}
@media screen and (min-width:970px) {
  #work a {/*padding:15px;*/width:calc(31% - 30px);}
}

/* FOOTER */
#footer {background-color:var(--bg-faint);}
#footer h5 {font-size:1.6em;}
#footer a {margin-right:20px;}
#footer a:hover {text-decoration:underline;}

/* dynamicLoad */
@media screen and (max-width:859px) {#dynamicLoad ~ * {display:none;}}
@media screen and (min-width:860px) {
  body.dynamicLoad {
    overflow:hidden;
    position:fixed;
    top:0;
    right:0;
    bottom:0;
    left:0;
    z-index:10;
  }
  #dynamicLoad ~ section, #dynamicLoad ~ footer {
    transition:filter 300ms;
    filter:blur(7px);
  }
  #dynamicLoad {
    background-color:rgba(255,255,255,0.3);
    box-shadow:0 0 140px -25px rgba(0,0,0,.6);
    max-height:calc(100vh - 100px);
    overflow-y:auto;
    padding:50px 0;
    position:fixed;
    top:0;
    right:0;
    bottom:0;
    left:0;
    z-index:10;
  }
}
@media screen and (min-width:1200px) {
  body.dynamicLoad {overflow:unset;}
}

@media (prefers-color-scheme:dark) {
:root {
  --text:#fff;
  --text-med:#bbb;
  --text-faint:#8f8e83;
  --text-faint-alpha:#8f8e838f;
  --text-ultra-faint:#444;
  --highlight:#5e5a00;
  --header-bg:#1d1d1d;
  --bg:#000;
  --bg-faint:#181818;
  --selection:#fffcdb42;
}
b {font-size:1.15em;line-height:1em;}
img.invert {filter:invert(1) hue-rotate(180deg);}
}

/*

bg-red
#FF5D5D

text-highlight
#fff

text-red
#4B0909

*/

